# pview

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.notls  Makefile  README.md  build.rs  docker-compose.yml  repository.yaml
.cargo/: config.toml
.github/workflows/: addon.yml  build.yml  pr.yml
addon/: Dockerfile  README.md  build.yaml  config.yaml  run.sh
addon/translations/: en.yaml
docs/: powerview-hub-rest-api-v2-appendix.md
src/: api_types.rs  discovery.rs  hass_helper.rs  http_helpers.rs  hub.rs  main.rs  mqtt_helper.rs  version_info.rs
src/commands/: activate_scene.rs  hub_info.rs  inspect_shade.rs  list_hubs.rs  list_scenes.rs  list_shades.rs  mod.rs  move_shade.rs  serve_mqtt.rs
