[package]
authors = ["Wez Furlong"]
repository = "https://github.com/wez/pview"
keywords = ["powerview", "home-automation"]
license = "MIT"
name = "pview"
version = "0.1.0"
edition = "2021"
description = "PowerView to MQTT bridge for Home Assistant"
build = "build.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mqtt-tls"]
mqtt-tls = ["mosquitto-rs/vendored-mosquitto", "mosquitto-rs/vendored-mosquitto-tls"]
mqtt-no-tls = ["mosquitto-rs/vendored-mosquitto"]

[dependencies]
anyhow = "1.0.77"
arc-swap = "1.6.0"
axum = { version = "0.7.4", default-features=false, features = ["tokio", "http1"] }
base64 = "0.21.5"
bitflags = { version = "2.4.2", features = ["serde"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
color-backtrace = "0.6.1"
data-encoding = "2.5.0"
dotenvy = "0.15.7"
env_logger = "0.10.2"
iana-time-zone = "0.1.58"
log = "0.4.20"
matchit = "0.7.3"
reqwest = { version = "0.11.23", default-features=false, features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_urlencoded = "0.7.1"
tabout = "0.3.0"
thiserror = "1.0.52"
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.wez-mdns]
version = "0.1.2"
#path = "../mdns"

[dependencies.mosquitto-rs]
version="0.11.1"
default-features = false
features = ["router"]
#path = "../mosquitto-rs/mosquitto-rs"
