[package]
authors = ["Wez Furlong"]
repository = "https://github.com/wez/pview"
keywords = ["powerview", "home-automation"]
license = "MIT"
name = "pview"
version = "0.1.0"
edition = "2021"
description = "PowerView to MQTT bridge for Home Assistant"
build = "build.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mqtt-tls"]
mqtt-tls = ["mosquitto-rs/vendored-mosquitto", "mosquitto-rs/vendored-mosquitto-tls"]
mqtt-no-tls = ["mosquitto-rs/vendored-mosquitto"]

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
axum = { version = "0.7.5", default-features=false, features = ["tokio", "http1"] }
base64 = "0.22.1"
bitflags = { version = "2.5.0", features = ["serde"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.7", features = ["derive"] }
color-backtrace = "0.6.1"
data-encoding = "2.6.0"
dotenvy = "0.15.7"
env_logger = "0.10.2"
iana-time-zone = "0.1.60"
log = "0.4.21"
matchit = "0.8.2"
reqwest = { version = "0.12.4", default-features=false, features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
serde_urlencoded = "0.7.1"
tabout = "0.3.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.wez-mdns]
version = "0.1.2"
#path = "../mdns"

[dependencies.mosquitto-rs]
version="0.11.2"
default-features = false
features = ["router"]
#path = "../mosquitto-rs/mosquitto-rs"
